refactor: unify image upload with ImageUploadHelper, clean FeedbackServlet/ProfileServlet, fix DAO updateFeedbackWithImage, remove debug-feedback.jsp