@@ -1,10 +1,10 @@
 package com.aisthea.fashion.controller;
 
 import com.aisthea.fashion.model.Feedback;
-import com.aisthea.fashion.util.Constants;
 import com.aisthea.fashion.model.User;
 import com.aisthea.fashion.service.FeedbackService;
 import com.aisthea.fashion.service.IFeedbackService;
+import com.aisthea.fashion.util.ImageUploadHelper;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.MultipartConfig;
 import jakarta.servlet.annotation.WebServlet;
@@ -13,28 +13,46 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import jakarta.servlet.http.Part;
-import java.io.File;
+
 import java.io.IOException;
-import java.io.InputStream;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
+/**
+ * Handles all feedback operations for users:
+ * <ul>
+ *   <li>GET  ?action=myFeedbacks  — user's feedback history</li>
+ *   <li>GET  ?orderId={id}        — feedback form for a specific order</li>
+ *   <li>POST action=submitAll     — submit/update all feedbacks for an order</li>
+ *   <li>POST action=update        — update a single feedback (from my-feedbacks page)</li>
+ *   <li>POST action=delete        — delete a feedback</li>
+ *   <li>POST action=incrementHelpful — mark a feedback as helpful (AJAX)</li>
+ * </ul>
+ *
+ * <p>Image uploads are handled by {@link ImageUploadHelper} and stored under
+ * {@code UPLOAD_DIR/feedback/}. The {@code ImageServlet} serves them at
+ * {@code /uploads/feedback/{filename}}.
+ */
 @MultipartConfig(
-    fileSizeThreshold = 1024 * 1024,      // 1 MB
-    maxFileSize       = 5 * 1024 * 1024,  // 5 MB mỗi file
-    maxRequestSize    = 10 * 1024 * 1024  // 10 MB tổng request
+    fileSizeThreshold = 1024 * 1024,        // 1 MB — spool to disk above this
+    maxFileSize       = 5L * 1024 * 1024,   // 5 MB max per file
+    maxRequestSize    = 20L * 1024 * 1024   // 20 MB total (multiple images per order)
 )
 @WebServlet(name = "FeedbackServlet", urlPatterns = { "/feedback" })
 public class FeedbackServlet extends HttpServlet {
+
+    private static final Logger logger = Logger.getLogger(FeedbackServlet.class.getName());
+
+    /** Sub-directory name inside UPLOAD_DIR for feedback images. */
+    private static final String FEEDBACK_SUBDIR = "feedback";
 
     private IFeedbackService feedbackService;
 
@@ -43,122 +61,11 @@ public class FeedbackServlet extends HttpServlet {
         this.feedbackService = new FeedbackService();
     }
 
+    // ─── GET ─────────────────────────────────────────────────────────────────
+
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-
-        // ===== DEBUG MODE =====
-        if ("1".equals(request.getParameter("debug"))) {
-            response.setContentType("text/html;charset=UTF-8");
-            java.io.PrintWriter out = response.getWriter();
-            out.println("<html><body style='font-family:monospace;padding:24px'>");
-            out.println("<h2>🛠 Feedback Debug - DB Management (V2.0 - SAFE DAO)</h2>");
-
-            try (java.sql.Connection conn = com.aisthea.fashion.dao.DBConnection.getConnection()) {
-                // Test DAO directly
-                out.println("<h3>DAO Test:</h3>");
-                try {
-                    List<Feedback> testList = feedbackService.getFeedbacksByProductId(14);
-                    out.println("getFeedbacksByProductId(14) returned: <b>" + testList.size() + "</b> rows<br/>");
-                    for (Feedback f : testList) {
-                        out.println("- ID=" + f.getFeedbackid() + " | Rating=" + f.getRating() + " | Comment="
-                                + f.getComment() + " | User=" + f.getUsername() + "<br/>");
-                    }
-
-                    List<Feedback> allList = feedbackService.getAllFeedbacks();
-                    out.println("getAllFeedbacks() returned: <b>" + allList.size() + "</b> rows<br/>");
-                } catch (Exception e) {
-                    out.println("<pre style='color:red'>DAO Error: " + e.getMessage() + "\n");
-                    e.printStackTrace(out);
-                    out.println("</pre>");
-                }
-
-                out.println("<hr/>");
-
-                // RUN MIGRATION IF REQUESTED
-                if ("migrate".equals(request.getParameter("cmd"))) {
-                    out.println(
-                            "<div style='background:#fef3c7;padding:12px;border:1px solid #f59e0b;margin-bottom:20px'>");
-                    out.println("<b>Running Migration...</b><br/>");
-                    String[] queries = {
-                            "IF NOT EXISTS (SELECT * FROM sys.columns WHERE object_id = OBJECT_ID(N'[dbo].[feedback]') AND name = 'is_verified') ALTER TABLE [feedback] ADD [is_verified] BIT DEFAULT 0;",
-                            "IF NOT EXISTS (SELECT * FROM sys.columns WHERE object_id = OBJECT_ID(N'[dbo].[feedback]') AND name = 'image_url') ALTER TABLE [feedback] ADD [image_url] NVARCHAR(500) NULL;",
-                            "IF NOT EXISTS (SELECT * FROM sys.columns WHERE object_id = OBJECT_ID(N'[dbo].[feedback]') AND name = 'helpful_count') ALTER TABLE [feedback] ADD [helpful_count] INT DEFAULT 0;",
-                            "IF NOT EXISTS (SELECT * FROM sys.columns WHERE object_id = OBJECT_ID(N'[dbo].[feedback]') AND name = 'admin_reply') ALTER TABLE [feedback] ADD [admin_reply] NVARCHAR(MAX) NULL;",
-                            "IF NOT EXISTS (SELECT * FROM sys.columns WHERE object_id = OBJECT_ID(N'[dbo].[feedback]') AND name = 'replied_at') ALTER TABLE [feedback] ADD [replied_at] DATETIME NULL;",
-                            "IF NOT EXISTS (SELECT * FROM sys.columns WHERE object_id = OBJECT_ID(N'[dbo].[feedback]') AND name = 'updatedat') ALTER TABLE [feedback] ADD [updatedat] DATETIME DEFAULT GETDATE();"
-                    };
-                    for (String q : queries) {
-                        try (java.sql.Statement s = conn.createStatement()) {
-                            s.execute(q);
-                            out.println("✅ Executed: " + q.substring(0, Math.min(60, q.length())) + "...<br/>");
-                        } catch (Exception ex) {
-                            out.println("❌ Failed: " + q + " | Error: " + ex.getMessage() + "<br/>");
-                        }
-                    }
-                    out.println("</div>");
-                }
-
-                out.println(
-                        "<a href='?debug=1&cmd=migrate' style='background:#2563eb;color:white;padding:8px 16px;text-decoration:none;border-radius:4px'>Run Schema Migration</a>");
-                out.println("<hr/>");
-
-                // Schema info
-                java.sql.ResultSetMetaData meta = null;
-                out.println("<h3>Bảng Feedback - All Columns:</h3>");
-                try (java.sql.PreparedStatement ps = conn.prepareStatement("SELECT TOP 1 * FROM feedback");
-                        java.sql.ResultSet rs = ps.executeQuery()) {
-                    meta = rs.getMetaData();
-                    out.println("<p><b>Columns:</b> ");
-                    for (int i = 1; i <= meta.getColumnCount(); i++) {
-                        out.print(meta.getColumnName(i) + (i < meta.getColumnCount() ? ", " : ""));
-                    }
-                    out.println("</p>");
-                }
-
-                // All feedback records
-                out.println("<h3>Tất cả records trong bảng feedback:</h3>");
-                out.println("<table border='1' cellpadding='6' style='border-collapse:collapse'>");
-                out.println("<tr style='background:#e5e7eb'>");
-                if (meta != null) {
-                    for (int i = 1; i <= meta.getColumnCount(); i++) {
-                        out.println("<th>" + meta.getColumnName(i) + "</th>");
-                    }
-                }
-                out.println("</tr>");
-
-                try (java.sql.PreparedStatement ps = conn
-                        .prepareStatement("SELECT * FROM feedback ORDER BY feedbackid DESC");
-                        java.sql.ResultSet rs = ps.executeQuery()) {
-                    int cnt = 0;
-                    while (rs.next()) {
-                        cnt++;
-                        out.println("<tr>");
-                        if (meta != null) {
-                            for (int i = 1; i <= meta.getColumnCount(); i++) {
-                                out.println("<td>" + rs.getObject(i) + "</td>");
-                            }
-                        }
-                        out.println("</tr>");
-                    }
-                    out.println("</table><p><b>Total: " + cnt + " rows</b></p>");
-                }
-                // Status distinct
-                out.println("<h3>Distinct status values:</h3>");
-                try (java.sql.PreparedStatement ps2 = conn
-                        .prepareStatement("SELECT DISTINCT status, COUNT(*) as cnt FROM feedback GROUP BY status");
-                        java.sql.ResultSet rs2 = ps2.executeQuery()) {
-                    while (rs2.next()) {
-                        out.println("status='" + rs2.getString("status") + "' | count=" + rs2.getInt("cnt") + "<br/>");
-                    }
-                }
-            } catch (Exception e) {
-                out.println("<pre style='color:red'>ERROR: " + e.getMessage() + "</pre>");
-            }
-            out.println("</body></html>");
-            return;
-        }
-        // ===== END DEBUG =====
 
         HttpSession session = request.getSession(false);
         if (session == null || session.getAttribute("user") == null) {
@@ -168,317 +75,289 @@ public class FeedbackServlet extends HttpServlet {
 
         String action = request.getParameter("action");
 
-        // ── Trang quản lý feedback của user ──
+        // My feedback history page
         if ("myFeedbacks".equals(action)) {
-            User currentUser = (User) session.getAttribute("user");
-            List<com.aisthea.fashion.model.Feedback> myList =
-                    feedbackService.getFeedbacksByUserId(currentUser.getUserId());
-            request.setAttribute("myFeedbacks", myList);
-            request.getRequestDispatcher("/WEB-INF/views/user/my-feedbacks.jsp").forward(request, response);
+            User user = (User) session.getAttribute("user");
+            request.setAttribute("myFeedbacks",
+                    feedbackService.getFeedbacksByUserId(user.getUserId()));
+            request.getRequestDispatcher("/WEB-INF/views/user/my-feedbacks.jsp")
+                   .forward(request, response);
             return;
         }
 
+        // Feedback form for a specific order
         String orderIdStr = request.getParameter("orderId");
-        if (orderIdStr == null || orderIdStr.trim().isEmpty()) {
+        if (orderIdStr == null || orderIdStr.isBlank()) {
             response.sendRedirect(request.getContextPath() + "/order?action=history");
             return;
         }
 
         request.setAttribute("orderId", orderIdStr);
 
-        // Load products in the order + their existing feedbacks all at once
         try {
             int orderId = Integer.parseInt(orderIdStr);
-            List<Map<String, Object>> orderItems = new ArrayList<>();
-            StringBuilder productIdsCsv = new StringBuilder();
+            User user   = (User) session.getAttribute("user");
 
+            // Load distinct products in this order
+            List<Map<String, Object>> orderItems = new ArrayList<>();
             try (Connection conn = com.aisthea.fashion.dao.DBConnection.getConnection();
-                    PreparedStatement ps = conn.prepareStatement(
-                            "SELECT DISTINCT pcs.productid, p.name AS product_name, oi.image_url " +
-                            "FROM orderitems oi " +
-                            "JOIN product_color_size pcs ON oi.productcolorsizeid = pcs.productcolorsizeid " +
-                            "JOIN products p ON pcs.productid = p.productid " +
-                            "WHERE oi.orderid = ?")) {
+                 PreparedStatement ps = conn.prepareStatement(
+                         "SELECT DISTINCT pcs.productid, p.name AS product_name, oi.image_url " +
+                         "FROM orderitems oi " +
+                         "JOIN product_color_size pcs ON oi.productcolorsizeid = pcs.productcolorsizeid " +
+                         "JOIN products p ON pcs.productid = p.productid " +
+                         "WHERE oi.orderid = ?")) {
                 ps.setInt(1, orderId);
                 try (ResultSet rs = ps.executeQuery()) {
                     while (rs.next()) {
                         Map<String, Object> item = new LinkedHashMap<>();
-                        int pid = rs.getInt("productid");
-                        item.put("productId", pid);
+                        item.put("productId",   rs.getInt("productid"));
                         item.put("productName", rs.getString("product_name"));
-                        item.put("imageUrl", rs.getString("image_url"));
+                        item.put("imageUrl",    rs.getString("image_url"));
                         orderItems.add(item);
-                        if (productIdsCsv.length() > 0) productIdsCsv.append(",");
-                        productIdsCsv.append(pid);
                     }
                 }
             }
 
-            // Load existing feedbacks FOR THIS ORDER ONLY (per-order scoped)
-            // A review from a previous purchase of the same product will NOT pre-fill here.
-            User currentUser = (User) session.getAttribute("user");
+            // Load existing feedbacks for this order (per-order scoped)
             com.aisthea.fashion.dao.FeedbackDAO fbDao = new com.aisthea.fashion.dao.FeedbackDAO();
-            java.util.Map<Integer, com.aisthea.fashion.model.Feedback> existingFeedbackMap = new java.util.HashMap<>();
+            Map<Integer, Feedback> existingFeedbackMap = new HashMap<>();
+            StringBuilder productIdsCsv = new StringBuilder();
+
             for (Map<String, Object> item : orderItems) {
                 int pid = (Integer) item.get("productId");
-                com.aisthea.fashion.model.Feedback existing =
-                    fbDao.getFeedbackByUserAndProductForOrder(currentUser.getUserId(), pid, orderId);
+                Feedback existing = fbDao.getFeedbackByUserAndProductForOrder(
+                        user.getUserId(), pid, orderId);
                 if (existing != null) existingFeedbackMap.put(pid, existing);
+                if (productIdsCsv.length() > 0) productIdsCsv.append(",");
+                productIdsCsv.append(pid);
             }
 
-
-            request.setAttribute("orderItems", orderItems);
-            request.setAttribute("productIdsCsv", productIdsCsv.toString());
+            request.setAttribute("orderItems",         orderItems);
+            request.setAttribute("productIdsCsv",      productIdsCsv.toString());
             request.setAttribute("existingFeedbackMap", existingFeedbackMap);
+
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.log(Level.SEVERE, "Error loading feedback form for orderId=" + orderIdStr, e);
         }
 
-        request.getRequestDispatcher("/WEB-INF/views/user/feedback.jsp").forward(request, response);
+        request.getRequestDispatcher("/WEB-INF/views/user/feedback.jsp")
+               .forward(request, response);
     }
+
+    // ─── POST ────────────────────────────────────────────────────────────────
 
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
 
         request.setCharacterEncoding("UTF-8");
+
         HttpSession session = request.getSession(false);
         if (session == null || session.getAttribute("user") == null) {
             response.sendRedirect(request.getContextPath() + "/login");
             return;
         }
 
-        User user = (User) session.getAttribute("user");
+        User   user   = (User) session.getAttribute("user");
         String action = request.getParameter("action");
 
+        // ── Mark helpful (AJAX) ──────────────────────────────────────────────
         if ("incrementHelpful".equals(action)) {
-            try {
-                int feedbackId = Integer.parseInt(request.getParameter("feedbackId"));
-                
-                // Track liked status in Session
-                Map<Integer, Boolean> likedMap = (Map<Integer, Boolean>) session.getAttribute("likedMap");
-                if (likedMap == null) {
-                    likedMap = new java.util.HashMap<>();
-                }
-                
-                // Prevent duplicate likes
-                if (likedMap.containsKey(feedbackId)) {
-                    response.setContentType("application/json");
-                    response.getWriter().write("{\"success\": false, \"message\": \"Already liked\"}");
-                    return;
-                }
-
-                boolean success = feedbackService.incrementHelpfulCount(feedbackId);
-                if (success) {
-                    likedMap.put(feedbackId, true);
-                    session.setAttribute("likedMap", likedMap);
-                }
-                
-                response.setContentType("application/json");
-                response.getWriter().write("{\"success\": " + success + "}");
-                return;
-            } catch (Exception e) {
-                response.sendError(HttpServletResponse.SC_BAD_REQUEST);
-                return;
-            }
+            handleIncrementHelpful(request, response, session);
+            return;
         }
 
-        // ── Xóa feedback ──
+        // ── Delete ───────────────────────────────────────────────────────────
         if ("delete".equals(action)) {
-            try {
-                int feedbackId = Integer.parseInt(request.getParameter("feedbackId"));
-                feedbackService.deleteFeedback(feedbackId, user.getUserId());
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-            String redirectUrl = request.getParameter("redirectUrl");
-            if (redirectUrl != null && !redirectUrl.trim().isEmpty()) {
-                response.sendRedirect(redirectUrl);
-            } else {
-                response.sendRedirect(request.getContextPath() + "/feedback?action=myFeedbacks");
-            }
+            handleDelete(request, response, user);
             return;
         }
 
-        // ── Sửa feedback ──
+        // ── Update single feedback (from my-feedbacks page) ──────────────────
         if ("update".equals(action)) {
-            try {
-                int feedbackId = Integer.parseInt(request.getParameter("feedbackId"));
-                int rating = Integer.parseInt(request.getParameter("rating"));
-                String comment = request.getParameter("comment");
-
-                // Handle image: new upload beats fallback existingImageUrl
-                String imageUrl = null;
-                try {
-                    Part filePart = request.getPart("feedbackImage");
-                    if (filePart != null && filePart.getSize() > 0) {
-                        String originalName = java.nio.file.Paths.get(filePart.getSubmittedFileName()).getFileName().toString();
-                        String ext = "";
-                        int dotIdx = originalName.lastIndexOf('.');
-                        if (dotIdx >= 0) ext = originalName.substring(dotIdx).toLowerCase();
-                        String savedName = java.util.UUID.randomUUID().toString() + ext;
-                        java.io.File feedbackDir = new java.io.File(com.aisthea.fashion.util.Constants.UPLOAD_DIR, "feedback");
-                        if (!feedbackDir.exists()) feedbackDir.mkdirs();
-                        java.io.File savedFile = new java.io.File(feedbackDir, savedName);
-                        try (java.io.InputStream is = filePart.getInputStream()) {
-                            java.nio.file.Files.copy(is, savedFile.toPath(), java.nio.file.StandardCopyOption.REPLACE_EXISTING);
-                        }
-                        imageUrl = "feedback/" + savedName;
-                    } else {
-                        // No new file — keep existing or null (user cleared)
-                        String existing = request.getParameter("existingImageUrl");
-                        imageUrl = (existing != null && !existing.isBlank()) ? existing : null;
-                    }
-                } catch (Exception imgEx) {
-                    // Image handling failed, preserve existing
-                    String existing = request.getParameter("existingImageUrl");
-                    imageUrl = (existing != null && !existing.isBlank()) ? existing : null;
-                }
-
-                // Update via DAO directly with image support
-                String sql = "UPDATE feedback SET rating = ?, comment = ?, image_url = ?, updatedat = GETDATE() WHERE feedbackid = ? AND userid = ?";
-                try (java.sql.Connection conn = com.aisthea.fashion.dao.DBConnection.getConnection();
-                     java.sql.PreparedStatement ps = conn.prepareStatement(sql)) {
-                    ps.setInt(1, rating);
-                    ps.setString(2, comment != null ? comment : "");
-                    ps.setString(3, imageUrl);
-                    ps.setInt(4, feedbackId);
-                    ps.setInt(5, user.getUserId());
-                    ps.executeUpdate();
-                }
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-            String redirectUrl = request.getParameter("redirectUrl");
-            if (redirectUrl != null && !redirectUrl.trim().isEmpty()) {
-                response.sendRedirect(redirectUrl);
-            } else {
-                response.sendRedirect(request.getContextPath() + "/feedback?action=myFeedbacks&updated=1");
-            }
+            handleUpdate(request, response, user);
             return;
         }
 
-
-        // ── Gửi/sửa TẤT CẢ feedback của đơn hàng cùng lúc ──
+        // ── Submit / update all feedbacks for an order ───────────────────────
         if ("submitAll".equals(action)) {
-            String productIdsStr = request.getParameter("productIds");
-            String orderId = request.getParameter("orderId");
-            if (productIdsStr != null && !productIdsStr.isBlank()) {
-                String[] pids = productIdsStr.split(",");
-                for (String pidStr : pids) {
-                    try {
-                        int pid = Integer.parseInt(pidStr.trim());
-                        String ratingStr = request.getParameter("rating_" + pid);
-                        if (ratingStr == null || ratingStr.isEmpty() || "0".equals(ratingStr)) continue;
-                        int rating = Integer.parseInt(ratingStr);
-                        String comment = request.getParameter("comment_" + pid);
-                        String feedbackIdStr = request.getParameter("feedbackId_" + pid);
-                        String existingImgUrl = request.getParameter("existingImageUrl_" + pid);
+            handleSubmitAll(request, response, user);
+            return;
+        }
 
-                        // Handle image upload per-product
-                        String imageUrl = (existingImgUrl != null && !existingImgUrl.isBlank()) ? existingImgUrl : null;
-                        try {
-                            Part filePart = request.getPart("feedbackImage_" + pid);
-                            if (filePart != null && filePart.getSize() > 0) {
-                                String originalName = Paths.get(filePart.getSubmittedFileName()).getFileName().toString();
-                                String ext = "";
-                                int dotIdx = originalName.lastIndexOf('.');
-                                if (dotIdx >= 0) ext = originalName.substring(dotIdx).toLowerCase();
-                                String savedName = UUID.randomUUID().toString() + ext;
-                                File feedbackDir = new File(Constants.UPLOAD_DIR, "feedback");
-                                if (!feedbackDir.exists()) feedbackDir.mkdirs();
-                                try (InputStream is = filePart.getInputStream()) {
-                                    Files.copy(is, new File(feedbackDir, savedName).toPath(), StandardCopyOption.REPLACE_EXISTING);
-                                }
-                                imageUrl = "feedback/" + savedName;
-                            }
-                        } catch (Exception imgEx) { /* keep existing */ }
+        // ── Fallback: single feedback submit (from product-detail page) ───────
+        handleSingleSubmit(request, response, user);
+    }
 
-                        if (feedbackIdStr != null && !feedbackIdStr.isBlank()) {
-                            // UPDATE
-                            int feedbackId = Integer.parseInt(feedbackIdStr);
-                            String sql = "UPDATE feedback SET rating=?, comment=?, image_url=?, updatedat=GETDATE() WHERE feedbackid=? AND userid=?";
-                            try (java.sql.Connection conn = com.aisthea.fashion.dao.DBConnection.getConnection();
-                                 java.sql.PreparedStatement ps = conn.prepareStatement(sql)) {
-                                ps.setInt(1, rating);
-                                ps.setString(2, comment != null ? comment : "");
-                                ps.setString(3, imageUrl);
-                                ps.setInt(4, feedbackId);
-                                ps.setInt(5, user.getUserId());
-                                ps.executeUpdate();
-                            }
-                        } else {
-                            // INSERT
-                            Feedback fb = new Feedback();
-                            fb.setUserid(user.getUserId());
-                            fb.setProductid(pid);
-                            fb.setRating(rating);
-                            fb.setComment(comment != null ? comment : "");
-                            fb.setImageUrl(imageUrl);
-                            fb.setStatus("Visible");
-                            feedbackService.addFeedback(fb);
-                        }
-                    } catch (Exception e) { e.printStackTrace(); }
+    // ─── Handlers ─────────────────────────────────────────────────────────────
+
+    /**
+     * AJAX — increments helpful count once per session per feedback.
+     */
+    private void handleIncrementHelpful(HttpServletRequest request,
+                                        HttpServletResponse response,
+                                        HttpSession session) throws IOException {
+        try {
+            int feedbackId = Integer.parseInt(request.getParameter("feedbackId"));
+
+            @SuppressWarnings("unchecked")
+            Map<Integer, Boolean> likedMap =
+                    (Map<Integer, Boolean>) session.getAttribute("likedMap");
+            if (likedMap == null) likedMap = new HashMap<>();
+
+            if (likedMap.containsKey(feedbackId)) {
+                response.setContentType("application/json;charset=UTF-8");
+                response.getWriter().write("{\"success\":false,\"message\":\"Already liked\"}");
+                return;
+            }
+
+            boolean ok = feedbackService.incrementHelpfulCount(feedbackId);
+            if (ok) {
+                likedMap.put(feedbackId, true);
+                session.setAttribute("likedMap", likedMap);
+            }
+
+            response.setContentType("application/json;charset=UTF-8");
+            response.getWriter().write("{\"success\":" + ok + "}");
+
+        } catch (Exception e) {
+            logger.log(Level.WARNING, "incrementHelpful failed", e);
+            response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+        }
+    }
+
+    /**
+     * Deletes a user's own feedback and redirects.
+     */
+    private void handleDelete(HttpServletRequest request,
+                              HttpServletResponse response,
+                              User user) throws IOException {
+        try {
+            int feedbackId = Integer.parseInt(request.getParameter("feedbackId"));
+            feedbackService.deleteFeedback(feedbackId, user.getUserId());
+        } catch (Exception e) {
+            logger.log(Level.WARNING, "Delete feedback failed", e);
+        }
+
+        String redirectUrl = request.getParameter("redirectUrl");
+        response.sendRedirect(
+                (redirectUrl != null && !redirectUrl.isBlank())
+                ? redirectUrl
+                : request.getContextPath() + "/feedback?action=myFeedbacks");
+    }
+
+    /**
+     * Updates a single feedback (rating + comment + optional image).
+     * Called from the my-feedbacks page.
+     */
+    private void handleUpdate(HttpServletRequest request,
+                              HttpServletResponse response,
+                              User user) throws IOException, ServletException {
+        try {
+            int    feedbackId = Integer.parseInt(request.getParameter("feedbackId"));
+            int    rating     = Integer.parseInt(request.getParameter("rating"));
+            String comment    = request.getParameter("comment");
+
+            // Resolve image: new upload > keep existing
+            String imageUrl = resolveImageUrl(
+                    request.getPart("feedbackImage"),
+                    request.getParameter("existingImageUrl"));
+
+            feedbackService.updateFeedback(feedbackId, user.getUserId(), rating, comment, imageUrl);
+
+        } catch (Exception e) {
+            logger.log(Level.SEVERE, "Update feedback failed", e);
+        }
+
+        String redirectUrl = request.getParameter("redirectUrl");
+        response.sendRedirect(
+                (redirectUrl != null && !redirectUrl.isBlank())
+                ? redirectUrl
+                : request.getContextPath() + "/feedback?action=myFeedbacks&updated=1");
+    }
+
+    /**
+     * Submits or updates all feedbacks for a given order at once.
+     * Skips products where the user gave rating = 0 (not rated).
+     */
+    private void handleSubmitAll(HttpServletRequest request,
+                                 HttpServletResponse response,
+                                 User user) throws IOException, ServletException {
+
+        String productIdsStr = request.getParameter("productIds");
+        String orderId       = request.getParameter("orderId");
+
+        if (productIdsStr != null && !productIdsStr.isBlank()) {
+            for (String pidStr : productIdsStr.split(",")) {
+                try {
+                    int    pid       = Integer.parseInt(pidStr.trim());
+                    String ratingStr = request.getParameter("rating_" + pid);
+
+                    // Skip unrated products
+                    if (ratingStr == null || ratingStr.isEmpty() || "0".equals(ratingStr)) continue;
+
+                    int    rating         = Integer.parseInt(ratingStr);
+                    String comment        = request.getParameter("comment_" + pid);
+                    String feedbackIdStr  = request.getParameter("feedbackId_" + pid);
+
+                    // Resolve image: new upload > keep existing
+                    String imageUrl = resolveImageUrl(
+                            request.getPart("feedbackImage_" + pid),
+                            request.getParameter("existingImageUrl_" + pid));
+
+                    if (feedbackIdStr != null && !feedbackIdStr.isBlank()) {
+                        // UPDATE existing review
+                        feedbackService.updateFeedback(
+                                Integer.parseInt(feedbackIdStr),
+                                user.getUserId(), rating, comment, imageUrl);
+                    } else {
+                        // INSERT new review
+                        Feedback fb = new Feedback();
+                        fb.setUserid(user.getUserId());
+                        fb.setProductid(pid);
+                        fb.setRating(rating);
+                        fb.setComment(comment != null ? comment : "");
+                        fb.setImageUrl(imageUrl);
+                        fb.setStatus("Visible");
+                        feedbackService.addFeedback(fb);
+                    }
+
+                } catch (Exception e) {
+                    logger.log(Level.WARNING, "submitAll: error for pid=" + pidStr, e);
                 }
             }
-            if (orderId != null && !orderId.isEmpty()) {
-                response.sendRedirect(request.getContextPath() + "/order?action=view&id=" + orderId + "&feedback=success");
-            } else {
-                response.sendRedirect(request.getContextPath() + "/order?action=history&feedback=success");
-            }
+        }
+
+        String redirect = (orderId != null && !orderId.isBlank())
+                ? request.getContextPath() + "/order?action=view&id=" + orderId + "&feedback=success"
+                : request.getContextPath() + "/order?action=history&feedback=success";
+        response.sendRedirect(redirect);
+    }
+
+    /**
+     * Handles a single-product feedback submit from the product-detail page.
+     */
+    private void handleSingleSubmit(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    User user) throws IOException, ServletException {
+
+        String productIdStr = request.getParameter("productId");
+        String ratingStr    = request.getParameter("rating");
+        String comment      = request.getParameter("comment");
+
+        if (productIdStr == null || productIdStr.isBlank()) {
+            logger.warning("[FeedbackServlet] handleSingleSubmit: productId is empty.");
+            response.sendRedirect(request.getContextPath() + "/order?action=history");
             return;
         }
 
         try {
-            String productIdStr = request.getParameter("productId");
-            String ratingStr = request.getParameter("rating");
-            String comment = request.getParameter("comment");
-
-            java.util.logging.Logger log = java.util.logging.Logger.getLogger("FeedbackServlet");
-            log.info("[Feedback] userId=" + user.getUserId()
-                    + " productId=" + productIdStr
-                    + " rating=" + ratingStr
-                    + " comment=" + comment);
-
-            if (productIdStr == null || productIdStr.trim().isEmpty()) {
-                log.warning("[Feedback] productId is empty, aborting.");
-                response.sendRedirect(request.getContextPath() + "/order?action=history");
-                return;
-            }
-
             int productId = Integer.parseInt(productIdStr.trim());
-            int rating = (ratingStr != null && !ratingStr.isEmpty()) ? Integer.parseInt(ratingStr) : 1;
+            int rating    = (ratingStr != null && !ratingStr.isEmpty())
+                            ? Integer.parseInt(ratingStr) : 1;
 
-            // ── Xử lý upload ảnh ──
-            String imageUrl = null;
-            try {
-                Part filePart = request.getPart("feedbackImage");
-                if (filePart != null && filePart.getSize() > 0) {
-                    String originalName = Paths.get(filePart.getSubmittedFileName()).getFileName().toString();
-                    String ext = "";
-                    int dotIdx = originalName.lastIndexOf('.');
-                    if (dotIdx >= 0) ext = originalName.substring(dotIdx).toLowerCase();
-
-                    String savedName = UUID.randomUUID().toString() + ext;
-
-                    // Lưu vào Constants.UPLOAD_DIR/feedback/ — cùng nơi ImageServlet tìm file
-                    File feedbackDir = new File(Constants.UPLOAD_DIR, "feedback");
-                    if (!feedbackDir.exists()) feedbackDir.mkdirs();
-
-                    File savedFile = new File(feedbackDir, savedName);
-                    try (InputStream is = filePart.getInputStream()) {
-                        Files.copy(is, savedFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-                    }
-
-                    // imageUrl lưu vào DB dạng "feedback/uuid.jpg"
-                    // ImageServlet sẽ serve từ: GET /uploads/feedback/uuid.jpg
-                    imageUrl = "feedback/" + savedName;
-                    java.util.logging.Logger.getLogger("FeedbackServlet")
-                        .info("[Feedback] Image saved to: " + savedFile.getAbsolutePath() + " | DB url=" + imageUrl);
-                }
-            } catch (Exception uploadEx) {
-                java.util.logging.Logger.getLogger("FeedbackServlet").warning("[Feedback] Image upload failed: " + uploadEx.getMessage());
-            }
+            String imageUrl = resolveImageUrl(request.getPart("feedbackImage"), null);
 
             Feedback feedback = new Feedback();
             feedback.setUserid(user.getUserId());
@@ -489,19 +368,39 @@ public class FeedbackServlet extends HttpServlet {
             feedback.setStatus("Visible");
 
             boolean saved = feedbackService.addFeedback(feedback);
-            log.info("[Feedback] saved=" + saved);
+            logger.info("[FeedbackServlet] Single submit saved=" + saved
+                    + " user=" + user.getUserId() + " product=" + productId);
 
             String orderId = request.getParameter("orderId");
-            if (orderId != null && !orderId.isEmpty()) {
-                response.sendRedirect(
-                        request.getContextPath() + "/order?action=view&id=" + orderId + "&feedback=success");
-            } else {
-                response.sendRedirect(
-                        request.getContextPath() + "/product?action=view&id=" + productId + "&feedback=success");
-            }
+            String redirect = (orderId != null && !orderId.isBlank())
+                    ? request.getContextPath() + "/order?action=view&id=" + orderId + "&feedback=success"
+                    : request.getContextPath() + "/product?action=view&id=" + productId + "&feedback=success";
+            response.sendRedirect(redirect);
+
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.log(Level.SEVERE, "[FeedbackServlet] Single submit failed", e);
             response.sendRedirect(request.getContextPath() + "/order?action=history");
         }
+    }
+
+    // ─── Image helper ─────────────────────────────────────────────────────────
+
+    /**
+     * Resolves the final image URL to store in the database:
+     * <ol>
+     *   <li>If a new file was uploaded and is valid → save and return its path.</li>
+     *   <li>Otherwise → return {@code existingImageUrl} (may be null or blank → null).</li>
+     * </ol>
+     */
+    private String resolveImageUrl(Part filePart, String existingImageUrl)
+            throws IOException {
+        try {
+            String uploaded = ImageUploadHelper.save(filePart, FEEDBACK_SUBDIR);
+            if (uploaded != null) return uploaded;
+        } catch (IOException e) {
+            logger.log(Level.WARNING, "Image upload failed, keeping existing", e);
+        }
+        return (existingImageUrl != null && !existingImageUrl.isBlank())
+               ? existingImageUrl : null;
     }
 }
