@@ -4,47 +4,39 @@ import com.aisthea.fashion.model.User;
 import com.aisthea.fashion.service.IUserService;
 import com.aisthea.fashion.service.UserService;
 import com.aisthea.fashion.util.Constants;
+import com.aisthea.fashion.util.ImageUploadHelper;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.MultipartConfig;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.*;
 
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
-import java.util.Set;
-import java.util.UUID;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
  * Handles user profile viewing and updating, including avatar upload.
  *
- * <p>Uses NIO {@link Files#copy} instead of {@code Part.write()} to reliably
- * write uploaded files to an absolute path regardless of Tomcat's temp-dir
- * configuration.
+ * <p>Avatar files are stored in {@code UPLOAD_DIR/avatars/} and served by
+ * {@code ImageServlet} at {@code /uploads/avatars/{filename}}.
+ * They are referenced in the DB as {@code "avatars/uuid.ext"}.
  */
 @MultipartConfig(
-    fileSizeThreshold = 1024 * 1024,      // 1 MB — spool to disk above this
-    maxFileSize       = 5L * 1024 * 1024, // 5 MB max per file
-    maxRequestSize    = 10L * 1024 * 1024 // 10 MB max per request
+    fileSizeThreshold = 1024 * 1024,        // 1 MB — spool to disk above this
+    maxFileSize       = 5L * 1024 * 1024,   // 5 MB max
+    maxRequestSize    = 10L * 1024 * 1024   // 10 MB total
 )
 @WebServlet(name = "ProfileServlet", urlPatterns = { "/profile" })
 public class ProfileServlet extends HttpServlet {
 
     private static final Logger logger = Logger.getLogger(ProfileServlet.class.getName());
 
-    /** Allowed avatar file extensions (whitelist). */
-    private static final Set<String> ALLOWED_EXTS = Set.of(".jpg", ".jpeg", ".png", ".gif", ".webp");
-
-    /** Subfolder inside UPLOAD_DIR where avatar files are stored. */
+    /** Sub-directory name inside UPLOAD_DIR for avatar files. */
     private static final String AVATAR_SUBDIR = "avatars";
 
-    /** Default avatar path stored in DB for new / reset accounts. */
+    /** Default avatar stored in DB for new accounts. */
     private static final String DEFAULT_AVATAR = "images/ava_default.png";
 
     private IUserService userService;
@@ -66,9 +58,9 @@ public class ProfileServlet extends HttpServlet {
             return;
         }
 
-        // Refresh session user from DB so profile shows the latest data
+        // Refresh session user from DB so profile always shows latest data
         try {
-            User user = (User) session.getAttribute("user");
+            User user  = (User) session.getAttribute("user");
             User fresh = new com.aisthea.fashion.dao.UserDAO().selectUser(user.getUserId());
             if (fresh != null) {
                 fresh.setPassword(null);
@@ -106,7 +98,7 @@ public class ProfileServlet extends HttpServlet {
         user.setGender(request.getParameter("gender"));
 
         String phone = request.getParameter("phone");
-        if (phone != null && !phone.trim().isEmpty()) {
+        if (phone != null && !phone.isBlank()) {
             if (!phone.trim().matches("^[0-9]{10}$")) {
                 response.sendRedirect(request.getContextPath() + "/profile?error=invalid_phone");
                 return;
@@ -121,74 +113,41 @@ public class ProfileServlet extends HttpServlet {
             try {
                 user.setDob(java.sql.Date.valueOf(dobStr));
             } catch (IllegalArgumentException e) {
-                logger.warning("Invalid DOB format from user " + user.getUserId() + ": " + dobStr);
+                logger.warning("Invalid DOB from user " + user.getUserId() + ": " + dobStr);
                 // Keep existing DOB — do not null it on bad input
             }
         }
-        // If dobStr is blank, keep whatever DOB is already on the user object.
 
         // ── Avatar upload ─────────────────────────────────────────────────────
-        Part filePart = request.getPart("avatar");
-        if (filePart != null && filePart.getSize() > 0) {
-            String submittedName = filePart.getSubmittedFileName();
-            if (submittedName != null && !submittedName.isBlank()) {
-
-                String originalName = Paths.get(submittedName).getFileName().toString();
-                String ext = "";
-                int dot = originalName.lastIndexOf('.');
-                if (dot >= 0) ext = originalName.substring(dot).toLowerCase();
-
-                if (!ALLOWED_EXTS.contains(ext)) {
-                    logger.warning("Avatar upload rejected (extension '" + ext + "') for user " + user.getUserId());
-                    response.sendRedirect(request.getContextPath() + "/profile?error=invalid_file_type");
-                    return;
-                }
-
-                // Resolve and ensure avatar directory exists
-                Path avatarDir = Paths.get(Constants.UPLOAD_DIR, AVATAR_SUBDIR);
-                if (!Files.exists(avatarDir)) {
-                    Files.createDirectories(avatarDir);
-                    logger.info("Created avatar directory: " + avatarDir);
-                }
-
-                // Delete old avatar (skip default and external URLs)
+        try {
+            String uploaded = ImageUploadHelper.save(request.getPart("avatar"), AVATAR_SUBDIR);
+            if (uploaded != null) {
+                // Delete old avatar file (skip default and external http URLs)
                 String oldAvatar = user.getAvatar();
                 if (oldAvatar != null && !oldAvatar.isBlank()
                         && !oldAvatar.equals(DEFAULT_AVATAR)
                         && !oldAvatar.startsWith("http")) {
-                    // Old avatars may be stored as "avatars/filename.jpg" or just "filename.jpg"
-                    Path oldPath = Paths.get(Constants.UPLOAD_DIR, oldAvatar);
                     try {
-                        Files.deleteIfExists(oldPath);
-                    } catch (Exception e) {
-                        logger.warning("Could not delete old avatar: " + oldPath + " -> " + e.getMessage());
+                        Files.deleteIfExists(Paths.get(Constants.UPLOAD_DIR, oldAvatar));
+                    } catch (Exception ex) {
+                        logger.warning("Could not delete old avatar: " + oldAvatar + " — " + ex.getMessage());
                     }
                 }
-
-                // Save new avatar with UUID to prevent filename collisions
-                String savedName = UUID.randomUUID().toString() + ext;
-                Path targetPath = avatarDir.resolve(savedName);
-
-                try (InputStream is = filePart.getInputStream()) {
-                    Files.copy(is, targetPath, StandardCopyOption.REPLACE_EXISTING);
-                    logger.info("Avatar saved: " + targetPath + " for user " + user.getUserId());
-                }
-
-                // Store as relative path "avatars/uuid.ext" in DB
-                user.setAvatar(AVATAR_SUBDIR + "/" + savedName);
+                user.setAvatar(uploaded);
             }
+        } catch (Exception e) {
+            logger.log(Level.WARNING, "Avatar upload failed for user " + user.getUserId(), e);
         }
 
-        // ── Persist changes ───────────────────────────────────────────────────
+        // ── Persist ───────────────────────────────────────────────────────────
         boolean success = false;
         try {
             success = userService.updateUser(user);
         } catch (Exception e) {
-            logger.log(Level.SEVERE, "Failed to update user profile: " + user.getUserId(), e);
+            logger.log(Level.SEVERE, "Failed to update user " + user.getUserId(), e);
         }
 
         if (success) {
-            // Refresh session with latest data
             user.setPassword(null);
             session.setAttribute("user", user);
             response.sendRedirect(request.getContextPath() + "/profile?success=true");
